# py-lorem-gen

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
py_lorem_gen/: __init__.py  core.py
tests/: test_py_lorem_gen.py
